# Events-scheduler

./: README.md
events-scheduler/: .coverage  .coveragerc  .env  Dockerfile  build.sh  docker-compose.yml  initial_data.json  manage.py  pyproject.toml  requirements.txt
events-scheduler/events/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
events-scheduler/events/migrations/: 0001_initial.py  0002_event_slug.py  0003_alter_event_date_alter_event_participants.py  0004_event_participants_count.py
events-scheduler/events_scheduler/: __init__.py  asgi.py  celery.py  limiters.py  settings.py  tests.py  urls.py  utils.py  validators.py  views.py  wsgi.py
events-scheduler/events_scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
events-scheduler/events_scheduler/extra_settings/: celery_settings.py
events-scheduler/scripts/db/: dump_data.sh  load_data.sh
events-scheduler/scripts/tests/: run_coverage.sh  run_html.sh  run_test.sh
events-scheduler/templates/: index.html
events-scheduler/templates/events/: create.html  delete.html  detail.html  list.html  update.html
events-scheduler/templates/main/: home.html
events-scheduler/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
events-scheduler/templates/users/: email.html  update.html  view.html
events-scheduler/users/: admin.py  email.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
(+7 files in other folders)
